try fix scrollbar issue3

--- a/src/iRLeagueManager.Web/wwwroot/css/site.css
+++ b/src/iRLeagueManager.Web/wwwroot/css/site.css
@@ -1,12 +1,17 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 @import url(toggle.css);
 
-@media (min-width: 840.98px) {
+html {
+    overflow-y: scroll;
+}
+
+@supports (scrollbar-gutter: stable) {
     html {
-        margin-right: calc(-1 * (100vw - 100%));
-        max-width: 100%
+        overflow: auto;
+        scrollbar-gutter: stable;
     }
 }
+
 
 .blazored-typeahead {
     border-color: rgb(206, 212, 218);
